Re-fix username color and spacing

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5361,7 +5361,7 @@ li.chat-message-root .message-body, li.chat-message-short .message-body, li.chat
 
 #thread .username-container a {
   font-weight: 600;
-  color: #2C2D30;
+  color: #4F5264;
   font-size: 15px
 }
 
